--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 target/
-#data/
+data/
 
 ### STS ###
 .apt_generated
@@ -11,7 +11,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-#.idea
+.idea
 *.iws
 *.iml
 *.ipr
